--- a/bootstrap4_nav/templates/bootstrap4_nav/head.html
+++ b/bootstrap4_nav/templates/bootstrap4_nav/head.html
@@ -1,4 +1,10 @@
 {% load bootstrap4_nav %}
-{# Load CSS #}
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+{# Load CSS and JavaScript #}
+{% bootstrap4_icons_url %}
 {% bootstrap_css %}
 {% bootstrap4_nav_css_url %}
+
