--- a/bootstrap4_nav/templates/bootstrap4_nav/navbar_items.html
+++ b/bootstrap4_nav/templates/bootstrap4_nav/navbar_items.html
@@ -1,3 +1,7 @@
 <!-- <li class="navbar-item{% if title == 'Page1' %} active{% endif %}"><a class="nav-link" href="/">Page1</a></li> -->
 <!-- <li class="navbar-item{% if title == 'Page2' %} active{% endif %}"><a class="nav-link" href="/">Page2</a></li> -->
 <!-- <li class="navbar-item{% if title == 'Page3' %} active{% endif %}"><a class="nav-link" href="/">Page3</a></li> -->
+<li class="nav-item"><a class="nav-link" href="/"><i class="bi bi-house"> </i>Basic Content</a></li>
+<li class="nav-item"><a class="nav-link" href="/table/"><i class="bi bi-table"> </i>Basic Table</a></li>
+<li class="nav-item"><a class="nav-link" href="/form/"><i class="bi bi-input-cursor-text"> </i>Basic Form</a></li>
+<li class="nav-item"><a class="nav-link" href="/bootstrap_form/"><i class="bi bi-input-cursor-text"> </i>Bootstrap Form</a></li>
