--- a/bootstrap4_nav/templates/bootstrap4_nav/navbar.html
+++ b/bootstrap4_nav/templates/bootstrap4_nav/navbar.html
@@ -1,19 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse justify-content-md-center">
+    {% if SHOW_SIDENAV and not FIXED_SIDENAV %}
+    <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#nav-sidenav" aria-controls="nav-sidenav" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    {% endif %}
+
     {% block site_name %}
-        <a href="/" class="navbar-brand mr-auto mr-lg-0">{% if BOOTSTRAP4_SITE_NAME %}{{ BOOTSTRAP4_SITE_NAME }}{% elif BOOTSTRAP4_TITLE %}{{ BOOTSTRAP4_TITLE }}{% else %}{{ site_name }}{% endif %}</a>
+        <a href="/" class="navbar-brand">{% if BOOTSTRAP4_SITE_NAME %}{{ BOOTSTRAP4_SITE_NAME }}{% elif BOOTSTRAP4_TITLE %}{{ BOOTSTRAP4_TITLE }}{% else %}{{ site_name }}{% endif %}</a>
     {% endblock %}
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+        {% block navbar_items %}
+            {% include "bootstrap4_nav/navbar_items.html" %}
+        {% endblock navbar_items %}
+        </ul>
     </div>
 </nav>
-
-<div id="nav-container" class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-            {% block navbar_items %}
-                {% include "bootstrap4_nav/navbar_items.html" %}
-            {% endblock navbar_items %}
-            </ul>
-        </div>
-    </nav>
-</div>
